--- a/src/css/style.css
+++ b/src/css/style.css
@@ -349,6 +349,24 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+.added{
+  animation: cartAnimation .5s;
+}
+
+@keyframes cartAnimation {
+  0% { transform: translate(0, 0); }
+  10% { transform: translate(-2px, -2px); }
+  20% { transform: translate(2px, -2px); }
+  30% { transform: translate(-2px, 2px); }
+  40% { transform: translate(2px, 2px); }
+  50% { transform: translate(-2px, -2px); }
+  60% { transform: translate(2px, -2px); }
+  70% { transform: translate(-2px, 2px); }
+  80% { transform: translate(2px, 2px); }
+  90% { transform: translate(-2px, -2px); }
+  100% { transform: translate(0, 0); }
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
